# simple-cmake-project

./: CMakeLists.txt  Dependency.cmake  README.md
add/: CMakeLists.txt
include/: add.h
sub_project/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: main.cc
